--- a/angularjs-validate-on-submit/index.html
+++ b/angularjs-validate-on-submit/index.html
@@ -5,9 +5,24 @@
 	<title>Validating AngularJS forms on submission</title>
 </head>
 <body ng-app="demo">
+
 	<div ng-controller="IndexController as ctrl">
 
+		<form name="loginForm">
+
+	    	<input type="email" name="email" placeholder="Email address" ng-model="ctrl.user.email" required>
+			<p ng-show="loginForm.email.$error.required">Please enter your email</p>
+			<p ng-show="loginForm.email.$error.email">Please enter a valid email</p>
+
+			<input type="password" name="password" placeholder="Password" ng-model="ctrl.user.password" required>
+			<p ng-show="loginForm.password.$error.required">Please enter your password</p>
+
+			<button type="submit">Log in</button>
+
+		</form>
+
 	</div>
+
 	<script src="js/angular.min.js"></script>
 	<script src="js/index.js"></script>
 </body>
